--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "pbmedia/laravel-ffmpeg": "^4.1",
